fixed banner alignment

--- a/content/_banner.scss
+++ b/content/_banner.scss
@@ -57,7 +57,6 @@
         color: $white;
         font-size: 1.3rem;  
         line-height: 1.75rem;
-        margin: 0 0 1.25rem;
         font-weight: 600;
         position: absolute;
         top: 60%;
