--- a/content/_footer.scss
+++ b/content/_footer.scss
@@ -9,6 +9,7 @@ footer {
         flex-wrap: wrap;
         display: flex;
         justify-content: center;
+        padding-right: 40px;
     }
     .offices {
         display: flex;
