--- a/scss/style.css
+++ b/scss/style.css
@@ -368,7 +368,6 @@
   color: #fff;
   font-size: 1.3rem;
   line-height: 1.75rem;
-  margin: 0 0 1.25rem;
   font-weight: 600;
   position: absolute;
   top: 60%;
@@ -466,8 +465,11 @@
   .form-control {
     padding-left: 20px;
   }
-  #banner {
-    text-align: center;
+  .h1 {
+    width: 100%;
+  }
+  .p1 {
+    width: 100%;
   }
   .cards {
     max-width: 93%;
@@ -963,6 +965,7 @@ footer .footer-row {
   flex-wrap: wrap;
   display: flex;
   justify-content: center;
+  padding-right: 40px;
 }
 footer .offices {
   display: flex;
