--- a/utilities/_media.scss
+++ b/utilities/_media.scss
@@ -49,8 +49,11 @@
     .form-control {
         padding-left: 20px;
     }
-    #banner {
-        text-align: center;
+    .h1 {
+        width: 100%;
+    }
+    .p1 {
+        width: 100%;
     }
     .cards {
         max-width: 93%;
